# em_fmt

./: .clang-format  .clangd  CMakeLists.txt  README.md  README_en.md  em_fmt.code-workspace  em_fmt.cpp  em_fmt.hpp  test_func.cpp  test_speed.cpp
em_fmt/: CMakeLists.txt  em_fmt.cpp  em_fmt.hpp
em_fmt/details/: config.hpp  write_argument.tpp
